--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Adrian Lawson</title>
+    <link rel="stylesheet" href="stylesheets/style.css">
+</head>
     <body>
-        <h1>hello world</h1>
-        <p>I'm hosted with github pages.</p>
+        <h1 class = "al">Adrian Lawson</h1>
     </body>
 </html>
