--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
     <body>
         <h1 class = "al">Adrian Lawson</h1>
+        <h2 class="about">
+            About Me
+        </h2>
+        <div class="about">
+            Computer Science Undergraduate at California State University of Fullerton
+            Graduation Date: May 2021
+        </div>
     </body>
 </html>
