--- a/index.html
+++ b/index.html
@@ -4,33 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title class="title">Adrian Lawson</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+
     <link rel="stylesheet" href="stylesheets/style.css">
 </head>
     <body>
         <h1 class = "al">Adrian Lawson</h1>
-        <!-- <h2 class="about">
-            About Me
-        </h2> -->
         <div class="about">
             Computer Science Undergraduate at California State University of Fullerton
         </div>
         <div class="about">Graduation Date: May 2021
         </div>
-        <div class="spacer"> </div>
-        <h1 class="project-header">Past Projects</h1>
-        <div class="spacer2"> </div>
-        <div class="project">
-            Business Card Generator Website
-            <img class="project-img" src="images/EZBiz.png" alt="Home Page">
-            <div class="spacer"> </div>
-            <div class="Project-descrip"> The purpose of this project was to create a simple business card 
-                generator that would be easy to use. The website also features a database, where users can store
-                their inputs for later retrieval with a given security key. I primarily worked on the database and 
-                helped with the design of the business card page and business card templates. For further information on
-                this project, see the video below.
-            </div>
-            <img class="project-img-2" src="images/BizCardSample.png" alt="Sample Biz-Card">
-            
+        <div class="about">
+            <a class="resume" href="Resume(Fall2020).pdf" download="Resume(Fall2020)">Download Resume</a> <a class="resume" href="projects.html">Portfolio</a><a class="email" href="mailto:adrianboblawson@csu.fullerton.edu">Send Email</a>
+            <a class="resume" href="https://github.com/aglawson">GitHub Repository</a>
         </div>
     </body>
 </html>
