added icons and reformatted

--- a/index.html
+++ b/index.html
@@ -11,13 +11,29 @@
     <body>
         <h1 class = "al">Adrian Lawson</h1>
         <div class="about">
-            Computer Science Undergraduate at California State University of Fullerton
+            Computer Science Undergraduate at California State University-Fullerton
         </div>
         <div class="about">Graduation Date: May 2021
         </div>
-        <div class="about">
-            <a class="resume" href="Resume(Fall2020).pdf" download="Resume(Fall2020)">Download Resume</a> <a class="resume" href="projects.html">Portfolio</a><a class="email" href="mailto:adrianboblawson@csu.fullerton.edu">Send Email</a>
-            <a class="resume" href="https://github.com/aglawson">GitHub Repository</a>
+        <div class="linkslist">
+        <ul class="links">
+            <li>
+                <a class="resume-img" href="Resume(Fall2020).pdf" download="Resume(Fall2020)"><img src="images/pdf_icon.jpg" alt="Resume Download"> </a>
+                <a class="resume" href="Resume(Fall2020).pdf" download="Resume(Fall2020)">  Resume </a>     
+            </li>
+            <li>
+                <a class="resume-img" href="projects.html"><img src="images/work.jpg" alt="Portfolio"></a>
+                <a class="resume" href="projects.html">Portfolio</a>
+            </li>
+            <li>
+                <a class="resume-img" href="mailto:adrianboblawson@csu.fullerton.edu"><img src="images/email_icon.jpg" alt="email"></a>
+                <a class="resume" href="mailto:adrianboblawson@csu.fullerton.edu">Email</a>
+            </li>
+            <li>
+                <a class="git-img" href="https://github.com/aglawson"><img class="resume" src="images/github.jpg" alt="github icon"></a>
+                <a class="git-text" href="https://github.com/aglawson">GitHub</a>
+            </li>
+        </ul>
         </div>
-    </body>
+ </body>
 </html>
