--- a/projects.html
+++ b/projects.html
@@ -9,12 +9,13 @@
       </head>
       <body>
     <main class="main-content">
-        <a class="home" href="index.html">Click to Go Back</a>
     <ul class="thumbnail-list">
+      <a class="home" href="index.html"><img src="images/home.png" alt=""></a>
+
       <li class="thumbnail-item">
           <a href="images/EZBiz.png" data-image-role="trigger" data-image-title="EZBiz Landing Page" data-image-url="images/EZBiz.png">
             <img class="thumbnail-image" src="images/EZBiz.png" alt="EZBiz Landing Page">
-            <span class="thumbnail-title">Business Card Generator Landing Page</span>
+            <span class="thumbnail-title">EZBiz Landing Page</span>
           </a>
         </li>
       <li class="thumbnail-item">
@@ -23,15 +24,13 @@
           <span class="thumbnail-title">Business Card Sample</span>
         </a>
       </li>
-      <li class="thumbnail-item">
-          <a href="https://www.youtube.com/embed/77VOSWP7bhA" data-image-role="trigger" data-image-title="Project Description" data-image-url="https://www.youtube.com/embed/77VOSWP7bhA"></a>
-        <iframe class="thumbnail-image" width="560" height="315" src="https://www.youtube.com/embed/77VOSWP7bhA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </li>
     </ul>
     <div class="detail-image-container">
       <div class="detail-image-frame" data-image-role="frame">
         <img class="detail-image" data-image-role="target" src="images/EZBiz.png" alt="EZBiz Landing Page">
         <span class="detail-image-title" data-image-role="title">EZBiz Landing Page</span>
+        <span class="detail-image-title"><a href="https://youtu.be/77VOSWP7bhA?t=411">Video Presentation</a></span>
+
                 </div>
             </div>
         </main>
