--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <div class="linkslist">
         <ul class="links">
             <li>
+                <a class="resume-img" href="https://www.linkedin.com/in/adrian-lawson/"><img src="images/linkedin.png" alt=""></a>
+                <a class="linkedin" href="https://www.linkedin.com/in/adrian-lawson/">LinkedIn</a>
+            </li>
+            <li>
                 <a class="resume-img" href="Resume(Fall2020).pdf" download="Resume(Fall2020)"><img src="images/pdf_icon.jpg" alt="Resume Download"> </a>
                 <a class="resume" href="Resume(Fall2020).pdf" download="Resume(Fall2020)">  Resume </a>     
             </li>
@@ -28,7 +32,7 @@
             </li>
             <li>
                 <a class="resume-img" href="mailto:adrianboblawson@csu.fullerton.edu"><img src="images/email_icon.jpg" alt="email"></a>
-                <a class="resume" href="mailto:adrianboblawson@csu.fullerton.edu">Email</a>
+                <a class="email" href="mailto:adrianboblawson@csu.fullerton.edu">Email</a>
             </li>
             <li>
                 <a class="git-img" href="https://github.com/aglawson"><img class="resume" src="images/github.jpg" alt="github icon"></a>
