--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
         <div class="linkslist">
         <ul class="links">
             <li>
-                <a class="resume-img" href="https://www.linkedin.com/in/adrian-lawson/"><img src="images/linkedin.png" alt=""></a>
-                <a class="linkedin" href="https://www.linkedin.com/in/adrian-lawson/">LinkedIn</a>
+                <a class="resume-img" href="https://www.linkedin.com/in/adrian-lawson/" target="_blank" rel="noreferrer noopener"><img src="images/linkedin.png" alt=""></a>
+                <a class="linkedin" href="https://www.linkedin.com/in/adrian-lawson/" target="_blank" rel="noreferrer noopener">LinkedIn</a>
             </li>
             <li>
                 <a class="resume-img" href="Resume(Fall2020).pdf" download="Resume(Fall2020)"><img src="images/pdf_icon.jpg" alt="Resume Download"> </a>
                 <a class="resume" href="Resume(Fall2020).pdf" download="Resume(Fall2020)">  Resume </a>     
             </li>
             <li>
-                <a class="resume-img" href="projects.html"><img src="images/work.jpg" alt="Portfolio"></a>
-                <a class="resume" href="projects.html">Portfolio</a>
+                <a class="resume-img" href="projects.html" target="_blank" rel="noreferrer noopener"><img src="images/work.jpg" alt="Portfolio"></a>
+                <a class="resume" href="projects.html" target="_blank" rel="noreferrer noopener">Portfolio</a>
             </li>
             <li>
                 <a class="resume-img" href="mailto:adrianboblawson@csu.fullerton.edu"><img src="images/email_icon.jpg" alt="email"></a>
                 <a class="email" href="mailto:adrianboblawson@csu.fullerton.edu">Email</a>
             </li>
             <li>
-                <a class="git-img" href="https://github.com/aglawson"><img class="resume" src="images/github.jpg" alt="github icon"></a>
-                <a class="git-text" href="https://github.com/aglawson">GitHub</a>
+                <a class="git-img" href="https://github.com/aglawson" target="_blank" rel="noreferrer noopener"><img class="resume" src="images/github.jpg" alt="github icon"></a>
+                <a class="git-text" href="https://github.com/aglawson" target="_blank" rel="noreferrer noopener">GitHub</a>
             </li>
         </ul>
         </div>
