--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     
 </head>
     <body>
-        <div class="al">Hi! My name is Adrian Lawson</div>
+        <div class="al">Adrian Lawson</div>
         <div class="about">
-            I am a Computer Science Undergraduate at California State University-Fullerton
+            I am a Computer Science Undergraduate at California State University-Fullerton.
         </div>
-        <div class="about">Graduation Date: May 2021
+        <div class="about">My graduation date is May 2021.
         </div>
         <div class="linkslist">
         <ul class="links">
