--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=3.0">
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
     <title class="al">Adrian Lawson</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
@@ -12,12 +12,15 @@
     
 </head>
     <body>
-        <div class="al">Adrian Lawson</div>
+        <body class="frame"> <img src="images/cmdline3.jpg" alt="">
+        <div class="al">c:\>My name is Adrian Lawson</div>
         <div class="about">
-            I am a Computer Science Undergraduate at California State University-Fullerton.
+            c:\>I am a Senior Computer Science major...
         </div>
-        <div class="about">My graduation date is May 2021.
+        <div class="about2">c:\>...at California State University-Fullerton.</div>
+        <div class="about3">c:\>My graduation date is May 2021.
         </div>
+        <div class="about4">c:\>Feel free to check out the links above!</div>
         <div class="linkslist">
         <ul class="links">
             <li>
@@ -42,5 +45,6 @@
             </li>
         </ul>
         </div>
+    </body>
  </body>
 </html>
