--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <link rel="icon" href="https://cdn4.iconfinder.com/data/icons/programming-developer/512/programing-developer-programming-html-code-coding-language-512.png">
     <script src="scripts/typeWriter.js"></script>
-    
+</body>
+
 </head>
     <body>
         <body class="frame"> <img src="images/cmdline3.jpg" alt="">
@@ -20,7 +21,7 @@
         <div class="about2">c:\>...at California State University-Fullerton.</div>
         <div class="about3">c:\>My graduation date is May 2021.
         </div>
-        <div class="about4">c:\>Feel free to check out the links above!</div>
+        <div class="about4">c:\>Feel free to check out the links!</div>
         <div class="linkslist">
         <ul class="links">
             <li>
@@ -45,6 +46,5 @@
             </li>
         </ul>
         </div>
-    </body>
  </body>
 </html>
