--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="about2">c:\>...at California State University-Fullerton.</div>
         <div class="about3">c:\>My graduation date is May 2021.
         </div>
-        <div class="about4">c:\>Feel free to check out the links!</div>
+        <div class="about4">c:\>Feel free to check out the links above!</div>
         <div class="linkslist">
         <ul class="links">
             <li>
