--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
     <body>
-        <body class="frame"> <img src="images/cmdline3.jpg" alt="">
+        <div class="frame"> <img src="images/cmdline3.jpg" alt="">
         <div class="al">c:\>My name is Adrian Lawson</div>
         <div class="about">
             c:\>I am a Senior Computer Science major...
@@ -23,6 +23,7 @@
         </div>
         <div class="about4">c:\>Feel free to check out the links above!</div>
         <div class="linkslist">
+            </div>
         <ul class="links">
             <li>
                 <a class="resume-img" href="https://www.linkedin.com/in/adrian-lawson/" target="_blank" rel="noreferrer noopener"><img src="images/linkedin.png" alt=""></a>
