--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
                 <a class="git-text" href="https://github.com/aglawson" target="_blank" rel="noreferrer noopener">GitHub</a>
             </li>
         </ul>
-        <div class="frame"> <img src="images/cmdline3.jpg" alt="">
-        <div class="al">c:\>My name is Adrian Lawson</div>
+        <div class="frame">
+        <div class="al">My name is Adrian Lawson</div>
         <div class="about">
-            c:\>I am a Senior Computer Science major...
+            I am a Senior Computer Science major...
         </div>
-        <div class="about2">c:\>...at California State University-Fullerton.</div>
-        <div class="about3">c:\>My graduation date is May 2021.
+        <div class="about2">at California State University-Fullerton.</div>
+        <div class="about3">My graduation date is May 2021.
         </div>
-        <div class="about4">c:\>Feel free to check out the links above!</div>
+        <div class="about4">Feel free to check out the links above!</div>
         <div class="linkslist">
             </div>
         
