--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="git-text" href="https://github.com/aglawson" target="_blank" rel="noreferrer noopener">GitHub</a>
             </li>
         </ul>
-        <div class="frame">
+        <!-- <div class="frame">
         <div class="al">My name is Adrian Lawson</div>
         <div class="about">
             I am a Senior Computer Science major...
@@ -47,6 +47,6 @@
         <div class="linkslist">
             </div>
         
-        </div>
+        </div> -->
  </body>
 </html>
