--- a/index.html
+++ b/index.html
@@ -16,14 +16,23 @@
 
 <div id="particles">
   <div id="intro">
-      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Adrian Lawson&nbsp<a href="Resume(Fall2020).pdf" style="color: white;"><img class="resume" src="http://mrodcreative.com/images/Icons/ResumeIcon.png" height="35" width="35"></a>    
+      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Adrian Lawson&nbsp    
       </h2>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
+    <ul class="links">
+        <li>
+            <a href="Resume(Fall2020).pdf" style="color: white;"><img class="resume" src="http://mrodcreative.com/images/Icons/ResumeIcon.png" height="35" width="35"></a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/in/adrian-lawson/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
+            &nbsp
+        </li>
+        <li>
+            <a href="https://github.com/aglawson/" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
+            &nbsp
+        </li>
     
-    <a href="https://www.linkedin.com/in/adrian-lawson/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
-    &nbsp
-    <a href="https://github.com/aglawson/" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
-    &nbsp
+    </ul>
   </div>
 </div>
 
