--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
 <div id="particles">
   <div id="intro">
+    <h1>
+      <img class="pic" src="https://avatars2.githubusercontent.com/u/36459896?s=460&u=4089a4e61163505063ae610cd86b063d24bcb453&v=4" alt="">
+    </h1>
       <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Adrian Lawson&nbsp    
       </h2>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
