--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <a href="Resume(Fall2020).pdf" style="color: white;"><img class="resume" src="http://mrodcreative.com/images/Icons/ResumeIcon.png" height="35" width="35"></a>
         </li>
         <li>
-            <a href="https://www.linkedin.com/in/adrian-lawson/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
+            <a class="linkedin" href="https://www.linkedin.com/in/adrian-lawson/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
             &nbsp
         </li>
         <li>
-            <a href="https://github.com/aglawson/" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
+            <a class="github" href="https://github.com/aglawson/" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
             &nbsp
         </li>
     
