--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <h1>
       <img class="pic" src="https://avatars2.githubusercontent.com/u/36459896?s=460&u=4089a4e61163505063ae610cd86b063d24bcb453&v=4" alt="">
     </h1>
-      <h2 class="name" style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Adrian Lawson&nbsp    
+    <a class="email" href="mailto:adrianboblawson@csu.fullerton.edu">
+      <h2 class="name" style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Adrian Lawson&nbsp
       </h2>
+      </a>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <ul class="links">
         <li>
