--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             <a class="github" href="https://github.com/aglawson/" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
             &nbsp
         </li>
-    
+        <li>
+          <a class="github" href="certificates.html" style="color: white;"><i class="fa-certificate" style="font-size: 2em;"></i></a>
+          &nbsp
+        </li>
     </ul>
   </div>
 </div>
