--- a/certificates.html
+++ b/certificates.html
@@ -20,10 +20,12 @@
 <ul>
     <li class="certs">
         <img src="images/sql_cert.png" alt="Linkedin Learning SQL Certificate">
-        <img src="images/learning_react_cert.png" alt="Linkedin Learning React.js Certificate"> 
-        <img src="images/react_cert.png" alt="Linkedin Learning React.js Certificate"> 
+        <img src="images/solidity.png" alt="Linkedin Learning Solidity">
+        <img src="images/Blockchain_bb.png" alt="Linkedin Blockchain Beyond the Basics">
     </li>
     <li class="certs"> 
+        <img src="images/learning_react_cert.png" alt="Linkedin Learning React.js Certificate"> 
+        <img src="images/react_cert.png" alt="Linkedin Learning React.js Certificate">
         <img src="images/csharpcert.png" alt="Udemy C# for Beginners Certificate">
     </li>
 </ul>
