--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <ul class="links">
         <li>
-            <a href="Resume(Fall2020).pdf" style="color: white;"><img class="resume" src="http://mrodcreative.com/images/Icons/ResumeIcon.png" height="35" width="35"></a>
+            <a href="Resume(Fall2020).docx" style="color: white;"><img class="resume" src="http://mrodcreative.com/images/Icons/ResumeIcon.png" height="35" width="35"></a>
         </li>
         <li>
-          <a class="github" href="certificates.html" style="color: white;"><i class="fa-certificate" style="font-size: 2em;"></i></a>
+          <a class="github" href="certificates.html" style="color: white;"><i class="fa-plus" style="font-size: 2em;"></i></a>
         </li>
         <li>
             <a class="linkedin" href="https://www.linkedin.com/in/adrian-lawson/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
