--- a/certificates.html
+++ b/certificates.html
@@ -19,16 +19,17 @@
     </div>
 <ul>
     <li class="certs">
+        <img src="images/Ethereum_dev.png" alt="Ethereum Development Udemy Course">
         <img src="images/Blockchain_Learning_Path.png" alt="Linkedin Learning Blockchain Learning Path Certificate">
         <img src="images/DApps.png" alt="">
-        <img src="images/solidity.png" alt="Linkedin Learning Solidity">
-    </li>
-    <li class="certs"> 
-        <img src="images/Blockchain_bb.png" alt="Linkedin Blockchain Beyond the Basics">
-        <img src="images/sql_cert.png" alt="Linkedin Learning SQL Certificate">
-        <img src="images/learning_react_cert.png" alt="Linkedin Learning React.js Certificate"> 
     </li>
     <li class="certs">
+        <img src="images/solidity.png" alt="Linkedin Learning Solidity"> 
+        <img src="images/Blockchain_bb.png" alt="Linkedin Blockchain Beyond the Basics">
+        <img src="images/sql_cert.png" alt="Linkedin Learning SQL Certificate">
+    </li>
+    <li class="certs">
+        <img src="images/learning_react_cert.png" alt="Linkedin Learning React.js Certificate"> 
         <img src="images/react_cert.png" alt="Linkedin Learning React.js Certificate">
         <img src="images/csharpcert.png" alt="Udemy C# for Beginners Certificate">
     </li>
