--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <ul class="links">
         <li>
-            <a href="Resume(Fall2020).docx" style="color: white;"><img class="resume" src="http://mrodcreative.com/images/Icons/ResumeIcon.png" height="35" width="35"></a>
+            <a href="Resume.pdf" style="color: white;"><img class="resume" src="images/1200px-PDF_file_icon.svg.png" height="35" width="30"></a>
         </li>
         <li>
-          <a class="github" href="certificates.html" style="color: white;"><i class="fa-plus" style="font-size: 2em;"></i></a>
+          <a href="Resume.docx" style="color: white;"a><img class="resume" src="images/900px-.docx_icon.svg.png" height="35" width="35"> </a>
         </li>
         <li>
-            <a class="linkedin" href="https://www.linkedin.com/in/adrian-lawson/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
+          <a class="github" href="certificates.html" style="color: white;"><img class="resume" src="images/cert.png" height="35" width="35"></i></a>
+        </li>
+        <li>
+            <a class="linkedin" href="https://www.linkedin.com/in/adrian-lawson/" style="color: white;"><i class="fab fa-linkedin-in" style="font-size: 2em;"></i></a>
             &nbsp
         </li>
         <li>
