--- a/certificates.html
+++ b/certificates.html
@@ -19,19 +19,23 @@
     </div>
 <ul>
     <li class="certs">
+        <img src="images/build_a_blockchain_cert.png" alt="Build a Blockchain and a Cryptocurrency from Scratch">
         <img src="images/Ethereum_dev.png" alt="Ethereum Development Udemy Course">
         <img src="images/Blockchain_Learning_Path.png" alt="Linkedin Learning Blockchain Learning Path Certificate">
-        <img src="images/DApps.png" alt="">
     </li>
     <li class="certs">
+        <img src="images/DApps.png" alt="">
         <img src="images/solidity.png" alt="Linkedin Learning Solidity"> 
         <img src="images/Blockchain_bb.png" alt="Linkedin Blockchain Beyond the Basics">
-        <img src="images/sql_cert.png" alt="Linkedin Learning SQL Certificate">
     </li>
     <li class="certs">
+        <img src="images/sql_cert.png" alt="Linkedin Learning SQL Certificate">
         <img src="images/learning_react_cert.png" alt="Linkedin Learning React.js Certificate"> 
         <img src="images/react_cert.png" alt="Linkedin Learning React.js Certificate">
+    </li>
+    <li>
         <img src="images/csharpcert.png" alt="Udemy C# for Beginners Certificate">
+
     </li>
 </ul>
            
