--- a/projects.html
+++ b/projects.html
@@ -6,17 +6,19 @@
   <link rel="icon" href="https://cdn4.iconfinder.com/data/icons/programming-developer/512/programing-developer-programming-html-code-coding-language-512.png">
   <meta name="viewport" content="width=device-width, initial-scale=0.5">
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/certstyle.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" type="text/css">
   <script type="text/javascript" src="js/jquery.particleground.js"></script>
   <script type="text/javascript" src="js/demo.js"></script>
 </head>
 
 <body>
+  <div class="title">Projects</div>
     <div>
-        <ul>
+        <ul >
           <li>
-            Blockchain Built from Scratch
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/-VKAyl-9KD8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="proj" width="75%" height="70%" src="https://www.youtube.com/embed/-VKAyl-9KD8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <span class="projTitle">Blockchain From Scratch</span>
           </li>
         </ul>
       </div>
