--- a/certificates.html
+++ b/certificates.html
@@ -3,7 +3,7 @@
 <head>
   <base target="_blank">
   <meta charset="UTF-8" />
-  <title>Certificates</title>
+  <title>Adrian Lawson | Certificates</title>
   <link rel="icon" href="https://cdn4.iconfinder.com/data/icons/programming-developer/512/programing-developer-programming-html-code-coding-language-512.png">
   <meta name="viewport" content="width=device-width, initial-scale=0.5">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" type="text/css">
