--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
           <a href="Resume.docx" style="color: white;"a><img class="resume" src="images/900px-.docx_icon.svg.png" height="35" width="35"> </a>
         </li>
         <li>
-          <a class="github" href="certificates.html" style="color: white;"><img class="resume" src="images/cert.png" height="35" width="35"></i></a>
+          <a href="projects.html" style="color: white;"><img class="resume" src="images/4109591.svg" jeight="35" width="35" alt="Projects"></a>
+        </li>
+        <li>
+          <a class="github" href="certificates.html" style="color: white;"><img class="resume" src="images/cert.png" height="35" width="35" alt="Certificates"></i></a>
         </li>
         <li>
             <a class="linkedin" href="https://www.linkedin.com/in/adrian-lawson/" style="color: white;"><i class="fab fa-linkedin-in" style="font-size: 2em;"></i></a>
