--- a/projects.html
+++ b/projects.html
@@ -2,10 +2,10 @@
 <head>
   <base target="_blank">
   <meta charset="UTF-8" />
-  <title>Adrian Lawson</title>
+  <title>Adrian Lawson | Projects</title>
   <link rel="icon" href="https://cdn4.iconfinder.com/data/icons/programming-developer/512/programing-developer-programming-html-code-coding-language-512.png">
   <meta name="viewport" content="width=device-width, initial-scale=0.5">
-  <link rel="stylesheet" href="css/style.css" />
+  <!-- <link rel="stylesheet" href="css/style.css" /> -->
   <link rel="stylesheet" href="css/certstyle.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" type="text/css">
   <script type="text/javascript" src="js/jquery.particleground.js"></script>
@@ -13,12 +13,26 @@
 </head>
 
 <body>
-  <div class="title">Projects</div>
+  <div class="projects">Projects</div>
     <div>
         <ul >
           <li>
-            <iframe class="proj" width="75%" height="70%" src="https://www.youtube.com/embed/-VKAyl-9KD8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <span class="projTitle">Blockchain From Scratch</span>
+            <iframe class="proj" width="75%" height="70%" src="https://www.youtube.com/embed/-VKAyl-9KD8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="projDescrip">In this project, I constructed a proof-of-work-based blockchain and Cryptocurrency from scratch, using JavaScript. Each user receives a wallet with a starting balance of 500. Transactions are validated via mining, at which point a new block is added.
+              Miners are rewarded with 50 currency units per validated transaction. Blocks can also be generated at will without validating transactions. Mining difficulty is regulated so that it remains relatively constant. 
+              Technologies used include JavaScript, Node.js, PostMan, and GitBash. See the code <a href="https://github.com/aglawson/BlockchainFromScratch">here</a>.
+            </div>
+          </li>
+          <li>
+            <span class="projTitle">Custom ERC20 Token + Initial Sale</span>
+            <iframe class="proj" width="75%" height="70%" src="https://www.youtube.com/embed/BxjGz1e8wvA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="projDescrip">A custom token built on top of Ethereum and deployed on Ethereum's Goerli test network. Find the instructions for interacting with this token <a href="https://www.linkedin.com/feed/update/urn:li:ugcPost:6760644667206959104?commentUrn=urn%3Ali%3Acomment%3A%28ugcPost%3A6760644667206959104%2C6761004469875556352%29">here</a>.</div>
+          </li>
+          <li>
+            <span class="projTitle">Decentralized Application to Send ETH</span>
+            <iframe class="proj" width="75%" height="70%" src="https://www.youtube.com/embed/7HDuBQghT7s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="projDescrip">A simple Decentralized Application (DApp) that uses smart contracts to send ETH from one address to another.</div>
           </li>
         </ul>
       </div>
