--- a/projects.html
+++ b/projects.html
@@ -13,21 +13,21 @@
 </head>
 
 <body>
-  <div class="projects">Projects</div>
+  <span class="projects">Projects</span> 
     <div>
         <ul >
           <li>
-            <span class="projTitle">Blockchain From Scratch</span>
+            <span class="projTitle"> <a href="https://github.com/aglawson/BlockchainFromScratch">Blockchain From Scratch</a></span>
             <iframe class="proj" width="75%" height="70%" src="https://www.youtube.com/embed/-VKAyl-9KD8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="projDescrip">In this project, I constructed a proof-of-work-based blockchain and Cryptocurrency from scratch, using JavaScript. Each user receives a wallet with a starting balance of 500. Transactions are validated via mining, at which point a new block is added.
               Miners are rewarded with 50 currency units per validated transaction. Blocks can also be generated at will without validating transactions. Mining difficulty is regulated so that it remains relatively constant. 
-              Technologies used include JavaScript, Node.js, PostMan, and GitBash. See the code <a href="https://github.com/aglawson/BlockchainFromScratch">here</a>.
+              Technologies used include JavaScript, Node.js, PostMan, and GitBash. Click the title to see the code!
             </div>
           </li>
           <li>
-            <span class="projTitle">Custom ERC20 Token + Initial Sale</span>
+            <span class="projTitle"> <a href="https://www.linkedin.com/feed/update/urn:li:ugcPost:6760644667206959104?commentUrn=urn%3Ali%3Acomment%3A%28ugcPost%3A6760644667206959104%2C6761004469875556352%29">Custom ERC20 Token + Initial Sale </a></span>
             <iframe class="proj" width="75%" height="70%" src="https://www.youtube.com/embed/BxjGz1e8wvA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div class="projDescrip">A custom token built on top of Ethereum and deployed on Ethereum's Goerli test network. Find the instructions for interacting with this token <a href="https://www.linkedin.com/feed/update/urn:li:ugcPost:6760644667206959104?commentUrn=urn%3Ali%3Acomment%3A%28ugcPost%3A6760644667206959104%2C6761004469875556352%29">here</a>.</div>
+            <div class="projDescrip">A custom token built on top of Ethereum and deployed on Ethereum's Goerli test network. Find the instructions for interacting with this token by clicking the title.
           </li>
           <li>
             <span class="projTitle">Decentralized Application to Send ETH</span>
