--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,13 @@
     <div>
         <ul >
           <li>
+            <span class="projTitle"> <a href="https://github.com/aglawson/FileUploadToEthereum">File Storage on the Blockchain</a> </span>
+            <iframe class="proj" width="75%" height="70%" src="https://www.youtube.com/embed/guKrprOWJrE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="projDescrip">This application allows the user to upload files to the Ethereum Blockchain. A smart contract is used to return the user's input and store it on the IPFS protocol. 
+              Click the title to go to the GitHub repository, where you will find instructions for how to use this application!
+            </div>
+          </li>
+          <li>
             <span class="projTitle"> <a href="https://github.com/aglawson/BlockchainFromScratch">Blockchain From Scratch</a></span>
             <iframe class="proj" width="75%" height="70%" src="https://www.youtube.com/embed/-VKAyl-9KD8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="projDescrip">In this project, I constructed a proof-of-work-based blockchain and Cryptocurrency from scratch, using JavaScript. Each user receives a wallet with a starting balance of 500. Transactions are validated via mining, at which point a new block is added.
