--- a/projects.html
+++ b/projects.html
@@ -13,17 +13,17 @@
 </head>
 
 <body>
-  <span class="projects">Projects</span> 
+  <span class="projects" id="top">Projects</span> 
     <div>
         <ul >
-          <li>
+          <li id="UpToEth">
             <span class="projTitle"> <a href="https://github.com/aglawson/FileUploadToEthereum">File Storage on the Blockchain</a> </span>
             <iframe class="proj" width="75%" height="70%" src="https://www.youtube.com/embed/guKrprOWJrE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="projDescrip">This application allows the user to upload files to the Ethereum Blockchain. A smart contract is used to return the user's input and store it on the IPFS protocol. 
               Click the title to go to the GitHub repository, where you will find instructions for how to use this application!
             </div>
           </li>
-          <li>
+          <li id="BCFromScratch">
             <span class="projTitle"> <a href="https://github.com/aglawson/BlockchainFromScratch">Blockchain From Scratch</a></span>
             <iframe class="proj" width="75%" height="70%" src="https://www.youtube.com/embed/-VKAyl-9KD8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="projDescrip">In this project, I constructed a proof-of-work-based blockchain and Cryptocurrency from scratch, using JavaScript. Each user receives a wallet with a starting balance of 500. Transactions are validated via mining, at which point a new block is added.
@@ -31,12 +31,12 @@
               Technologies used include JavaScript, Node.js, PostMan, and GitBash. Click the title to see the code!
             </div>
           </li>
-          <li>
+          <li id="EthToken">
             <span class="projTitle"> <a href="https://www.linkedin.com/feed/update/urn:li:ugcPost:6760644667206959104?commentUrn=urn%3Ali%3Acomment%3A%28ugcPost%3A6760644667206959104%2C6761004469875556352%29">Custom ERC20 Token + Initial Sale </a></span>
             <iframe class="proj" width="75%" height="70%" src="https://www.youtube.com/embed/BxjGz1e8wvA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="projDescrip">A custom token built on top of Ethereum and deployed on Ethereum's Goerli test network. Find the instructions for interacting with this token by clicking the title.
           </li>
-          <li>
+          <li id="bottom">
             <span class="projTitle">Decentralized Application to Send ETH</span>
             <iframe class="proj" width="75%" height="70%" src="https://www.youtube.com/embed/7HDuBQghT7s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="projDescrip">A simple Decentralized Application (DApp) that uses smart contracts to send ETH from one address to another.</div>
