--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <ul class="links">
         <li>
-            <a href="Resume.pdf" style="color: white;"><img class="resume" src="images/1200px-PDF_file_icon.svg.png" height="35" width="30"></a>
+            <a href="https://ipfs.io/ipfs/QmR2HiEXgfSoHXXur2938L3AhCXsUMBfPT3vvvVk7Uoupf" style="color: white;"><img class="resume" src="images/1200px-PDF_file_icon.svg.png" height="35" width="30"></a>
         </li>
         <li>
           <a href="Resume.docx" style="color: white;"a><img class="resume" src="images/900px-.docx_icon.svg.png" height="35" width="35"> </a>
