--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>
       <img class="pic" src="https://avatars2.githubusercontent.com/u/36459896?s=460&u=4089a4e61163505063ae610cd86b063d24bcb453&v=4" alt="">
     </h1>
-    <a class="email" href="mailto:adrianboblawson@csu.fullerton.edu">
+    <a class="email" href="mailto:adrianglawson@gmail.com">
       <h2 class="name" style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Adrian Lawson&nbsp
       </h2>
       </a>
@@ -29,7 +29,7 @@
             <a href="https://ipfs.io/ipfs/QmR2HiEXgfSoHXXur2938L3AhCXsUMBfPT3vvvVk7Uoupf" style="color: white;"><img class="resume" src="images/1200px-PDF_file_icon.svg.png" height="35" width="30"></a>
         </li>
         <li>
-          <a href="Resume.docx" style="color: white;"a><img class="resume" src="images/900px-.docx_icon.svg.png" height="35" width="35"> </a>
+          <a href="Lawson_Adrian_Resume.docx" style="color: white;"a><img class="resume" src="images/900px-.docx_icon.svg.png" height="35" width="35"> </a>
         </li>
         <li>
           <a href="projects.html" style="color: white;"><img class="resume" src="images/4109591.svg" jeight="35" width="35" alt="Projects"></a>
