--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,15 @@
   <span class="projects" id="top">Projects</span> 
     <div>
         <ul >
+
+<li id="BettingDApp">
+            <span class="projTitle"> <a href="https://github.com/aglawson/CoinFlipDapp_Phase1">Decentralized Betting App</a> </span>
+            <iframe class="proj" width="75%" height="70%" src="https://www.YouTube.com/embed/EH-l2zclrYo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="projDescrip"> As part of the Ivan on Tech Blockchain Academy's Ethereum 201 course, this was a solo, unguided project to make a DApp where users could bet ETH and have a 50/50 chance of winning double their bet. Smart contracts were 
+              written and tested to ensure security and functionality. Watch the video above for more details and click the project title to go to the GitHub! 
+            </div>
+          </li>
+
           <li id="UpToEth">
             <span class="projTitle"> <a href="https://github.com/aglawson/FileUploadToEthereum">File Storage on the Blockchain</a> </span>
             <iframe class="proj" width="75%" height="70%" src="https://www.youtube.com/embed/guKrprOWJrE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
