--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <base target="_blank">
   <meta charset="UTF-8" />
-  <title>Adrian Lawson</title>
+  <title>Adrian Lawson | Software Developer</title>
   <link rel="icon" href="https://cdn4.iconfinder.com/data/icons/programming-developer/512/programing-developer-programming-html-code-coding-language-512.png">
   <meta name="viewport" content="width=device-width, initial-scale=0.5">
   <link rel="stylesheet" href="css/style.css" />
@@ -26,7 +26,7 @@
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <ul class="links">
         <li>
-            <a href="https://ipfs.io/ipfs/QmeoJDhiog3GxHQZddzaneKckw5mqsPytzvFciAwcKu4R6" style="color: white;"><img class="resume" src="images/1200px-PDF_file_icon.svg.png" height="35" width="30"></a>
+            <a href="https://ipfs.io/ipfs/QmVmSMZXpbZmP9c5mhFo8ZwnyuWyYaNBN4onJ3yFoyyAcu" style="color: white;"><img class="resume" src="images/1200px-PDF_file_icon.svg.png" height="35" width="30"></a>
         </li>
         <li>
           <a href="Lawson_Adrian_Resume.docx" style="color: white;"a><img class="resume" src="images/900px-.docx_icon.svg.png" height="35" width="35"> </a>
