--- a/certificates.html
+++ b/certificates.html
@@ -19,21 +19,22 @@
     </div>
 <ul>
     <li class="certs">
+        <img src="images/EthereumSmartContractProgramming201.png" alt="Ethereum Smart Contract Programming 201">
         <img src="images/build_a_blockchain_cert.png" alt="Build a Blockchain and a Cryptocurrency from Scratch">
         <img src="images/Ethereum_dev.png" alt="Ethereum Development Udemy Course">
-        <img src="images/Blockchain_Learning_Path.png" alt="Linkedin Learning Blockchain Learning Path Certificate">
     </li>
     <li class="certs">
+        <img src="images/Blockchain_Learning_Path.png" alt="Linkedin Learning Blockchain Learning Path Certificate">
         <img src="images/DApps.png" alt="">
         <img src="images/solidity.png" alt="Linkedin Learning Solidity"> 
-        <img src="images/Blockchain_bb.png" alt="Linkedin Blockchain Beyond the Basics">
     </li>
     <li class="certs">
+        <img src="images/Blockchain_bb.png" alt="Linkedin Blockchain Beyond the Basics">
         <img src="images/sql_cert.png" alt="Linkedin Learning SQL Certificate">
         <img src="images/learning_react_cert.png" alt="Linkedin Learning React.js Certificate"> 
-        <img src="images/react_cert.png" alt="Linkedin Learning React.js Certificate">
     </li>
-    <li>
+    <li class="certs">
+        <img src="images/react_cert.png" alt="Linkedin Learning React.js Certificate">
         <img src="images/csharpcert.png" alt="Udemy C# for Beginners Certificate">
 
     </li>
