--- a/index.html
+++ b/index.html
@@ -26,16 +26,10 @@
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <ul class="links">
         <li>
-            <a href="https://ipfs.io/ipfs/QmVvc9MM1rwTMDK21WW4zqwBQfXTV5iPFkxkGUYdep3zPP" style="color: white;"><img class="resume" src="images/1200px-PDF_file_icon.svg.png" height="35" width="30"></a>
+            <a href="./Adrian_Lawson_Resume-2.PDF" style="color: white;"><img class="resume" src="images/1200px-PDF_file_icon.svg.png" height="35" width="30"></a>
         </li>
         <li>
-          <a href="Lawson_Adrian_Resume.docx" style="color: white;"a><img class="resume" src="images/900px-.docx_icon.svg.png" height="35" width="35"> </a>
-        </li>
-        <li>
-          <a href="projects.html" style="color: white;"><img class="resume" src="images/4109591.svg" jeight="35" width="35" alt="Projects"></a>
-        </li>
-        <li>
-          <a class="github" href="certificates.html" style="color: white;"><img class="resume" src="images/cert.png" height="35" width="35" alt="Certificates"></i></a>
+          <a href="https://ipfs.moralis.io:2053/ipfs/QmcmuDSSgkViQjNmwc8dqFcCM2GPmpw7ocbsuNNVVabi5s" style="color: white;"><img class="resume" src="images/4109591.svg" jeight="35" width="35" alt="Projects"></a>
         </li>
         <li>
             <a class="linkedin" href="https://www.linkedin.com/in/adrian-lawson/" style="color: white;"><i class="fab fa-linkedin-in" style="font-size: 2em;"></i></a>
