--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <ul class="links">
         <li>
-            <a href="./Adrian_Lawson_Resume.PDF" style="color: white;"><img class="resume" src="images/1200px-PDF_file_icon.svg.png" height="35" width="30"></a>
+            <a href="./Lawson_Adrian_Resume.pdf" style="color: white;"><img class="resume" src="images/1200px-PDF_file_icon.svg.png" height="35" width="30"></a>
         </li>
         <li>
           <a href="https://ipfs.moralis.io:2053/ipfs/QmcmuDSSgkViQjNmwc8dqFcCM2GPmpw7ocbsuNNVVabi5s" style="color: white;"><img class="resume" src="images/4109591.svg" jeight="35" width="35" alt="Projects"></a>
